<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rootRiderArea"
    tools:context=".RiderRegister">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="10dp"
        android:text="@string/titlelogin"
        android:textAlignment="center"
        android:textColor="#1D4D04"
        android:textSize="24sp"
         />

    <EditText
        android:id="@+id/riderPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="8dp"
        android:focusedByDefault="true"
        android:inputType="phone"
        android:text="+880"
        android:padding="10dp"
        android:textSize="24sp"
        />

    <EditText
        android:inputType="numberPassword"
        android:id="@+id/riderCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/confirmation_code"
         />

    <Button
        android:id="@+id/riderConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="32dp"
        android:text="@string/use_sms"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="292dp"
        android:padding="5dp"
        android:text="@string/charge"
        android:textAlignment="center"
        android:textSize="18sp"
         />

</LinearLayout>