<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetails"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="5dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <TextView
            android:textColor="#202001"
            android:text="@string/name"
            android:textSize="24sp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="Ex: Jon A. Bobs"
            android:textSize="22sp"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/detailsName"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <TextView
            android:textColor="#202001"
            android:text="@string/address"
            android:textSize="24sp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="Ex: London,USA"
            android:id="@+id/detailsAddress"
            android:textSize="22sp"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <TextView
            android:textColor="#202001"
            android:text="@string/gender"
            android:textSize="24sp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="Ex: Female"
            android:id="@+id/detailsGender"
            android:textSize="22sp"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <TextView
            android:textColor="#202001"
            android:text="@string/b_o_d"
            android:textSize="24sp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="Ex: dd-mm-YYYY"
            android:id="@+id/detailsBOD"
            android:textSize="22sp"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <TextView
            android:textColor="#202001"
            android:text="@string/mobile2"
            android:textSize="24sp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="Ex: +8801XXXXXXXXX"
            android:id="@+id/detailsMobile"
            android:textSize="22sp"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <TextView
            android:textColor="#202001"
            android:text="Nationality"
            android:textSize="24sp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="Ex: USA"
            android:id="@+id/detailsPassword"
            android:textSize="22sp"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <TextView
            android:textColor="#202001"
            android:text="@string/created"
            android:textSize="24sp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="Auto Generated"
            android:id="@+id/detailsCreated"
            android:textSize="22sp"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <Button
        android:id="@+id/detailsEditInfo"
        android:background="#E91E63"
        android:textColor="#FFF"
        android:layout_marginTop="40dp"
        android:text="@string/update_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/detailsSave"
        android:background="#0EB607"
        android:textColor="#FFF"
        android:layout_marginTop="40dp"
        android:text="@string/save_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>